# noema

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: config.yml  issue.yml
.github/workflows/: ci.yml  release.yml
crates/noema-cli/: Cargo.toml
crates/noema-cli/src/: bench.rs  main.rs
crates/noema-core/: Cargo.toml
crates/noema-core/src/: api.rs  audit.rs  benchmark.rs  capacity.rs  config.rs  crypto.rs  error.rs  extraction.rs  frontmatter.rs  fusion.rs  hippocampus.rs  identity.rs  ids.rs  index.rs  jsonl.rs  lib.rs  lock.rs  memory.rs  memorypack.rs  multihop.rs  offload.rs  pageindex.rs  paths.rs  policy.rs  project.rs  recall.rs  review.rs  s3.rs  sensitivity.rs  storage.rs  store.rs  text.rs  vacuum.rs  variants.rs
crates/noema-core/src/api/: mod.rs  tests.rs  types.rs
crates/noema-core/src/benchmark/: locomo.rs  memory.rs  mod.rs  pipeline.rs  prompt.rs  quality.rs  recall_bench.rs  score.rs  token.rs
crates/noema-mcp/: Cargo.toml
crates/noema-mcp/src/: lib.rs  main.rs
crates/noema-mcp/tests/: stdio_contract.rs
crates/noema-server/: Cargo.toml
crates/noema-server/src/: main.rs
skills/noema-memory/: SKILL.md
skills/noema-memory/agents/: openai.yaml
tests/: benchmark.rs  cli_smoke.rs  enterprise_policy.rs  mcp_contract.rs  s3_fake.rs
