[workspace]
resolver = "2"
members = [
  "crates/noema-core",
  "crates/noema-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/ZSeven-W/noema"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
fs4 = "0.8"
predicates = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
