[workspace]
resolver = "2"
members = [
  "crates/noema-core",
  "crates/noema-cli",
  "crates/noema-mcp",
  "crates/noema-server",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/ZSeven-W/noema"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
async-trait = "0.1"
aws-sdk-s3 = "1"
axum = "0.7"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
fs4 = "0.8"
hmac = "0.12"
jieba-rs = "0.7"
jsonwebtoken = "9"
rust-stemmers = "1"
predicates = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
zstd = "0.13"
