[package]
name = "noema"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
noema-core = { path = "../noema-core" }
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[[test]]
name = "cli_smoke"
path = "../../tests/cli_smoke.rs"
