[package]
name = "noema-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Compiles the large LOCOMO/recall benchmark harness (src/benchmark.rs). Off by
# default so library consumers do not pay for it; the noema CLI enables it.
benchmark = []

[dependencies]
async-trait.workspace = true
aws-sdk-s3.workspace = true
base64.workspace = true
fs4.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "s3_fake"
path = "../../tests/s3_fake.rs"

[[test]]
name = "enterprise_policy"
path = "../../tests/enterprise_policy.rs"

[[test]]
name = "benchmark"
path = "../../tests/benchmark.rs"
required-features = ["benchmark"]
