[package]
name = "noema-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "noema-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
http = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
noema-core = { path = "../noema-core" }
noema-mcp = { path = "../noema-mcp" }
rmcp = { version = "1", features = ["server", "macros", "transport-streamable-http-server", "server-side-http", "tower"] }
tower = "0.5"
